# TDS-Project-1-App-Builder-API

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: config.py  db.py  models.py  rate_limit.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  admin.py  build.py  evaluation.py
app/core/: events.py  security.py
app/schemas/: build.py
app/services/: evaluation_client.py  github_service.py  llm_service.py  task_queue.py
